# svg

./: LICENSE  README.md
expo-image-to-svg/: README.md  expo-module.config.json  package-lock.json  package.json  tsconfig.json
expo-image-to-svg/android/: CMakeLists  CMakeLists.txt  build.gradle
expo-image-to-svg/android/src/main/cpp/: ExpoImageToSvgModule.cpp
expo-image-to-svg/android/src/main/java/expo/modules/imagetosvg/: ExpoImageToSvgModule.kt  ExpoImageToSvgView.kt
expo-image-to-svg/cpp/: VTracerEngine.cpp  VTracerEngine.hpp
expo-image-to-svg/example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
expo-image-to-svg/ios/: ExpoImageToSvg.podspec  ExpoImageToSvgJSIInstaller.h  ExpoImageToSvgJSIInstaller.mm  ExpoImageToSvgModule.swift  ExpoImageToSvgView.swift
expo-image-to-svg/src/: ExpoImageToSvg.types.ts  ExpoImageToSvgModule.ts  ExpoImageToSvgModule.web.ts  ExpoImageToSvgView.tsx  ExpoImageToSvgView.web.tsx  index.ts
